--- a/invoice-service/src/main/resources/application.properties
+++ b/invoice-service/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=9001
+server.port=0
+eureka.client.serviceUrl.defaultZone=http://localhost:8760/eureka
+spring.application.name=invoice-service
