--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=9000
-
+eureka.client.serviceUrl.defaultZone=http://localhost:8760/eureka
+spring.application.name=order-service
