--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 server.port=8000
+eureka.client.serviceUrl.defaultZone=http://localhost:8760/eureka
+spring.application.name=product-service
